@startuml

hide empty members

package social.utils.condition {

interface Condition {
  bool evaluate(Context context)
}

class AttitudeCondition {
  Role from, toward
  AttitudeType type
  int threshold
  bool checkForBigger
}

class CauseEmotion {
  Role role
  EmotionType type
}

class HasEmotion {
  Role role
  EmotionType type
}

class HasRelationship {
  Role from, toward
  Relationship relationship
}

class HasTrait {
  Role role
  Trait trait
}

}

Condition <|-- AttitudeCondition
Condition <|-- CauseEmotion
Condition <|-- HasEmotion
Condition <|-- HasRelationship
Condition <|-- HasTrait


@enduml